--- a/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventTicketsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventTicketsContent.cshtml
@@ -44,7 +44,8 @@
                             @await Html.PartialAsync("Members/_MemberAvatar", new MemberAvatarViewModel
                             {
                                 Member = payment.Member,
-                                Width = 30
+                                Width = 30,
+                                Version
                             })
                         </div>
                     </td>
