--- a/ODK.Web.Razor/Views/Shared/Components/Instagram/_InstagramPost.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/Instagram/_InstagramPost.cshtml
@@ -13,7 +13,7 @@
 <div class="social-media-image-tile">
     <a href="#" data-bs-toggle="modal" data-bs-target="#@modalId">
         <div class="social-media-image-container">
-            <img src="/instagram/images/@defaultImage.Id/thumbnail?size=250" alt="@defaultImage.Alt" />
+            <img src="/instagram/images/@defaultImage.Id/thumbnail?size=250&v=@defaultImage.Version" alt="@defaultImage.Alt" />
             @if (Model.Images.Count > 1)
             {
                 @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.Images)
@@ -41,7 +41,7 @@
                     .Select(x => new CarouselItemViewModel
                     {
                         ImageAlt = x.Alt,
-                        ImageUrl = $"/instagram/images/{x.Id}"
+                        ImageUrl = $"/instagram/images/{x.Id}?v={x.Version}"
                     })
                     .ToArray()
             })
