--- a/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventResponsesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventResponsesContent.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ODK.Core.Events
 @using ODK.Core.Members
+@using ODK.Data.Core.Members
 @using ODK.Services.Events.ViewModels
 @using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Components
@@ -9,7 +10,7 @@
 @inject IOdkRoutes OdkRoutes
 @{
     var memberDictionary = Model.Members
-        .ToDictionary(x => x.Id);
+        .ToDictionary(x => x.Member.Id);
 
     var responseDictionary = Model.Responses
         .ToDictionary(x => x.MemberId, x => x.Type);
@@ -53,14 +54,14 @@
             continue;
         }
 
-        IReadOnlyCollection<Member> members;
+        IReadOnlyCollection<MemberWithAvatarDto> members;
 
         if (responses != null)
         {
             members = responses
                 .Where(x => memberDictionary.ContainsKey(x.MemberId) && !waitlist.Contains(x.MemberId))
                 .Select(x => memberDictionary[x.MemberId])
-                .OrderBy(x => x.GetDisplayName(Model.Chapter.Id))
+                .OrderBy(x => x.Member.GetDisplayName(Model.Chapter.Id))
                 .ToArray();
         }
         else if (responseType == EventResponseType.Waitlist)
@@ -68,14 +69,14 @@
             members = Model.Waitlist
                 .Where(x => memberDictionary.ContainsKey(x.MemberId))
                 .Select(x => memberDictionary[x.MemberId])
-                .OrderBy(x => x.GetDisplayName(Model.Chapter.Id))
+                .OrderBy(x => x.Member.GetDisplayName(Model.Chapter.Id))
                 .ToArray();
         }
         else
         {
             members = Model.Members
-                .Where(x => !responseDictionary.ContainsKey(x.Id) && !waitlist.Contains(x.Id))
-                .OrderBy(x => x.GetDisplayName(Model.Chapter.Id))
+                .Where(x => !responseDictionary.ContainsKey(x.Member.Id) && !waitlist.Contains(x.Member.Id))
+                .OrderBy(x => x.Member.GetDisplayName(Model.Chapter.Id))
                 .ToArray();
         }
 
@@ -90,8 +91,9 @@
             BodyContentFunc = 
                 @<div>
                     <div class="row row-cols-3 row-cols-md-6">
-                        @foreach (var member in members)
+                        @foreach (var dto in members)
                         {
+                            var member = dto.Member;
                             responseDictionary.TryGetValue(member.Id, out var response);
 
                             <div class="col mb-3">
@@ -100,7 +102,8 @@
                                     <div>
                                         @await Html.PartialAsync("Members/_MemberAvatar", new MemberAvatarViewModel
                                         {
-                                            Member = member
+                                            Member = member,
+                                            Version = dto.AvatarVersion
                                         })  
                                     </div>
                                     <div>
