--- a/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventTicketsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventTicketsContent.cshtml
@@ -43,17 +43,17 @@
                         <div>
                             @await Html.PartialAsync("Members/_MemberAvatar", new MemberAvatarViewModel
                             {
-                                Member = payment.Member,
+                                Member = payment.Member.Member,
                                 Width = 30,
-                                Version
+                                Version = payment.Member.AvatarVersion
                             })
                         </div>
                     </td>
                     <td>
                         @await Html.PartialAsync("Admin/_AdminLink", new AdminLinkViewModel
                         {
-                            Route = OdkRoutes.GroupAdmin.Member(Model.Chapter, payment.Member.Id),
-                            Text = payment.Member.GetDisplayName(Model.Chapter.Id)
+                            Route = OdkRoutes.GroupAdmin.Member(Model.Chapter, payment.Member.Member.Id),
+                            Text = payment.Member.Member.GetDisplayName(Model.Chapter.Id)
                         })
                     </td>                    
                     <td>
