--- a/ODK.Web.Razor/Views/Shared/Members/_ListMember.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Members/_ListMember.cshtml
@@ -14,9 +14,10 @@
         <div class="d-flex align-items-end justify-content-center">
            @await Html.PartialAsync("Members/_MemberAvatar", new MemberAvatarViewModel
             {
-                Member = Model.Member,
                 IsTop = !Model.HideName,
-                MaxWidth = Model.MaxWidth
+                Member = Model.Member,
+                MaxWidth = Model.MaxWidth,
+                Version = Model.AvatarVersion
             })
         </div>
             
