--- a/ODK.Web.Razor/Views/Shared/Members/_MemberList.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Members/_MemberList.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ODK.Web.Razor.Models.Members
-@model ODK.Web.Razor.Models.Members.MemberListViewModel
+@model MemberListViewModel
 @{
     if (Model.Members.Count == 0)
     {
@@ -12,11 +12,12 @@
             @(Model.Cols == 4 ? "row-cols-4" : null)
             @(Model.Cols == 3 ? "row-cols-md-6 row-cols-3" : null)
             @(Model.Cols == 2 ? "row-cols-lg-4 row-cols-2" : null)">
-    @foreach (ListMemberViewModel member in Model.Members)
+    @foreach (var member in Model.Members)
     {
         <div class="@(Model.Cols > 0 ? "col" : null)">
             @await Html.PartialAsync("Members/_ListMember", new ListMemberViewModel
             {
+                AvatarVersion = member.AvatarVersion,
                 Chapter = Model.Chapter,
                 MaxWidth = Model.MaxWidth,
                 Member = member.Member,
