--- a/ODK.Web.Razor/Views/Shared/Account/_UpdatePictureContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_UpdatePictureContent.cshtml
@@ -11,7 +11,7 @@
             @await Html.PartialAsync("Members/_MemberAvatar", new MemberAvatarViewModel
             {
                 Member = Model.Member,
-                Version = Model.ImageVersion
+                Version = Model.AvatarVersion
             })
         </div>
 
