--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberImageContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberImageContent.cshtml
@@ -10,7 +10,7 @@
     @await Html.PartialAsync("Members/_MemberAvatar", new MemberAvatarViewModel
     {
         Member = Model.Member,
-        Version = Model.Avatar?.Version
+        Version = Model.AvatarVersion
     })
 </section>
 <section class="section--admin">
