--- a/ODK.Web.Razor/Pages/Account/Picture.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Picture.cshtml
@@ -13,7 +13,7 @@
     Layout = "_AccountLayout";
     Model.Title = "Profile picture";
 
-    var viewModel = await AccountViewModelService.GetSitePicturePage(Model.CurrentMember.Id);
+    var viewModel = await AccountViewModelService.GetSitePicturePage(Model.CurrentMember);
 }
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
@@ -30,8 +30,8 @@
                 <section class="section">
                     @await Html.PartialAsync("Account/_UpdatePictureContent", new UpdatePictureViewModel
                     {
+                        AvatarVersion = viewModel.AvatarVersion,
                         Chapter = null,
-                        ImageVersion = viewModel.ImageVersion,
                         Member = viewModel.CurrentMember                    
                     })
                 </section>
