--- a/ODK.Web.Razor/wwwroot/css/build.scss
+++ b/ODK.Web.Razor/wwwroot/css/build.scss
@@ -24,6 +24,7 @@
 @import "_dropdowns";
 @import "_elements";
 @import "_expandable-select";
+@import "_feedback";
 @import "_footer";
 @import "_forms";
 @import "_google";
@@ -44,6 +45,7 @@
 @import "_social-media";
 @import "_tabs";
 @import "_tables";
+@import "_toasts";
 
 @import "_events";
 @import "_home";
