--- a/ODK.Web.Razor/wwwroot/css/main.css
+++ b/ODK.Web.Razor/wwwroot/css/main.css
@@ -13043,6 +13043,7 @@ html[data-platform=odk] {
 
 .offcanvas {
   --bs-offcanvas-width: 500px;
+  --bs-offcanvas-zindex: 1091;
 }
 .offcanvas hr {
   margin-top: 0.5rem;
@@ -13324,6 +13325,19 @@ th.sortable.sort-desc:after {
 
 .tcol-narrow {
   width: 1px;
+}
+
+.toast-container {
+  bottom: 0;
+  right: 0;
+}
+@media (max-width: 575.98px) {
+  .toast-container {
+    width: 100%;
+  }
+}
+.toast-container .toast {
+  width: 100%;
 }
 
 .event-list {
