--- a/ODK.Web.Razor/Views/Shared/Components/_Modal.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Modal.cshtml
@@ -13,7 +13,7 @@
 }
 
 <div class="modal @Model.Class" tabindex="-1" id="@Model.Id">
-    <div class="modal-dialog modal-dialog-scrollable @size">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable @size">
         <div class="modal-content">
             <div class="modal-header @(!hasTitle ? "no-title" : null)">
                 @if (hasTitle)
