--- a/ODK.Web.Razor/Views/Shared/Home/_HomeContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Home/_HomeContent.cshtml
@@ -8,6 +8,7 @@
     var i = 0;
 }
 <main id="main">
+    @await Html.PartialAsync("Components/_ToastAnchor", new ToastAnchorViewModel { PseudoContainer = true })
     @await Html.PartialAsync("Components/_Section", new SectionViewModel
     {
         Content = 
