(notifications): add relative timestamp

--- a/ODK.Web.Razor/Views/Shared/Components/_Icon.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Icon.cshtml
@@ -29,6 +29,8 @@
         <i class="@Model.Class fa-solid fa-chevron-right"></i>break;    
     case IconType.CircleNotch:
         <i class="@Model.Class fa-solid fa-circle-notch fa-spin"></i>break;
+    case IconType.Clock:
+        <i class="@Model.Class fa-regular fa-clock"></i>break;
     case IconType.Contact:
         <i class="@Model.Class fa-regular fa-envelope"></i>break;
     case IconType.Copy:
